--- a/ElegirNumJugador.html
+++ b/ElegirNumJugador.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 
 	<head>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Number of Players Selection</title>
+		<title>Demon's Survivor</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="shortcut icon" type="image/png" href="..\JuegoWeb\Botones\favicon.png"/>
+		
 	</head>
 
 	<body background="background2.jpg">
+		
+		<img id="numJ" src="..\JuegoWeb\Botones\numJugadores.png">
 		
 		<div id="contBotones">
 			<div id="b1p">
@@ -25,11 +29,13 @@
 			</div>
 			<br>
 			<div id="bvolver">
-				<img id="bregresar" src="..\JuegoWeb\Botones\bvolver.png">
+				<a href="Main.html">
+				<img id="bregresar" src="..\JuegoWeb\Botones\batras.png">
+				</a>
 			</div>
 		</div>
 
-		<footer id="autores">Copyright by Raúl Caño, Darío González y Adrián Soriano.</footer>
+		<footer id="autores">Copyright © Raúl Caño, Darío González y Adrián Soriano.</footer>
 
 	</body>
 	
