--- a/Main.html
+++ b/Main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
 
 	<head>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Main Menu</title>
+		<title>Demon's Survivor</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+		
 	</head>
 
 	<body background="background2.jpg">
+	
+		<img id="titulo" src="..\JuegoWeb\Botones\titulo.png">
 		
 		<div id="contBotones">
 			<div id="boton1">
@@ -24,13 +28,17 @@
 				<img id="bcreditos" src="..\JuegoWeb\Botones\bcreditos.png">
 			</div>
 			<br>
+			<div id="boton3">
+				<img id="binstrucciones" src="..\JuegoWeb\Botones\binstrucciones.png">
+			</div>
+			<br>
 			<div id="bOpciones">
 				<img id="bengland" src="..\JuegoWeb\Botones\bengland.png">
 				<img id="bsoundOff" src="..\JuegoWeb\Botones\bsoundOff.png">
 			</div>
 		</div>
 
-		<footer id="autores">Copyright by Raúl Caño, Darío González y Adrián Soriano.</footer>
+		<footer id="autores">Copyright © Raúl Caño, Darío González y Adrián Soriano.</footer>
 
 	</body>
 	
