--- a/UnJugador.html
+++ b/UnJugador.html
@@ -8,12 +8,13 @@
 	<head>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>UnJugador</title>
+		<title>Demon's Survivor</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<link rel="shortcut icon" type="image/png" href="..\JuegoWeb\Botones\favicon.png"/>
 		
 	</head>
 
-	<body>
+	<body background="background2.jpg">
 	
 		<div>
 			<canvas id="playground" width="800" height="800"></canvas> <!--Revisar- Si se borra el cuadrado se deforma.-->
