--- a/ElegirNumJugador.html
+++ b/ElegirNumJugador.html
@@ -11,10 +11,10 @@
 		
 	</head>
 
-	<body background="background2.jpg">
+	<body background="background4.jpg">
 		
 		<img id="numJ" src="..\JuegoWeb\Botones\numJugadores.png">
-		
+		<div id="contenedorNumero">
 		<div id="contBotones">
 			<div id="b1p">
 				<a href="UnJugador.html">
@@ -34,7 +34,7 @@
 				</a>
 			</div>
 		</div>
-
+		</div>
 		<footer id="autores">Copyright © Raúl Caño, Darío González y Adrián Soriano.</footer>
 
 	</body>
