--- a/UnJugador.html
+++ b/UnJugador.html
@@ -12,15 +12,20 @@
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link rel="shortcut icon" type="image/png" href="..\JuegoWeb\Botones\favicon.png"/>
 		
+		
 	</head>
 
-	<body background="background2.jpg">
-	
-		<div>
+	<body background="background4.jpg">
+		<br>
+		
+		<div>			
 			<canvas id="playground" width="800" height="800"></canvas> <!--Revisar- Si se borra el cuadrado se deforma.-->
-			
+			<p id="interfaz"> Puntuación </p>
+			<div id="display">
+			<img id="bpause" src="..\JuegoWeb\Botones\bpause.png">	
+			</div>
 		</div>		
-	
+		
 		<script src="app.js"></script>
 		<script language="JavaScript"></script>
 
