--- a/Main.html
+++ b/Main.html
@@ -7,14 +7,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>Demon's Survivor</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
-		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+		<link rel="shortcut icon" type="image/png" href="..\JuegoWeb\Botones\favicon.png"/>
 		
 	</head>
 
-	<body background="background2.jpg">
+	<body background="background6.jpg">
 	
 		<img id="titulo" src="..\JuegoWeb\Botones\titulo.png">
-		
+		<div id="contenedorMain">
 		<div id="contBotones">
 			<div id="boton1">
 				<a href="ElegirNumJugador.html">
@@ -37,7 +37,7 @@
 				<img id="bsoundOff" src="..\JuegoWeb\Botones\bsoundOff.png">
 			</div>
 		</div>
-
+		</div>
 		<footer id="autores">Copyright © Raúl Caño, Darío González y Adrián Soriano.</footer>
 
 	</body>
